Closed
Bug 319131
Opened 20 years ago
Closed 20 years ago
Blank "entries" at the bottom of the Download Manager
Categories
(Camino Graveyard :: Downloading, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: davedit, Assigned: sfraser_bugs)
Details
(Keywords: fixed1.8)
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20051204 Camino/1.0+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20051204 Camino/1.0+
There seems to be around 1.5 blank "entries" (or space) at the bottom of the Download Manager. When downloading multiple files, a scroll bar will show up before your downloads go below the lower threshold of your download manager (this depends on the size of your download manager of course).
Reproducible: Always
Steps to Reproduce:
1. Download multiple files until they almost reach the bottom of your download manager.
2.
3.
Actual Results:
Scrollbar appears earlier than it should.
Expected Results:
No scrollbar should appear yet.
Confirming per Jasper on IRC; trunk-only
Assignee: mikepinkerton → nick.kreeger
Status: UNCONFIRMED → NEW
Ever confirmed: true
Actually, happens on the branch, too. smfr thinks it could be something he did. I don't recall seeing it a couple of days ago when I last had >2 downloads.
Version: Trunk → unspecified
Comment 4•20 years ago
|
||
Simon, is this possible regression from your tweakings of the download stack view?
Comment 5•20 years ago
|
||
Possibly related issue:
http://forums.mozillazine.org/viewtopic.php?p=1929059#1929059
cl
So this broke on the branch only yesterday (12-5); it was fine in the 12-4 build, which explains why we didn't see this when filing the bug yesterday morning.
http://tinyurl.com/abs8s (branch window)
Those checkins are all smfr :-)
Comment 8•20 years ago
|
||
*** Bug 319349 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 10•20 years ago
|
||
Fixed.
Comment 11•20 years ago
|
||
I am seeing this on todays (12-08) official branch build. :/
Cheers
Comment 12•20 years ago
|
||
Errr, never mind. I was using and old trunk build that as called by another app. Sorry.
You need to log in
before you can comment on or make changes to this bug.
Description
•