Fix bug 319131: eliminate blank area at the bottom of the downloads list by making sure that the CHFlippedShinkWrapView that wraps the CHStackView doesn't add any extra padding.